Implement exam searching

--- a/exams/templates/exams/detail.html
+++ b/exams/templates/exams/detail.html
@@ -30,7 +30,7 @@
     <li> Put figures in appendix: {{ exam.figuresInAppendix }} </li>
     <li> One question per file: {{ exam.inputFiles }} </li>
 
-    <li> Layout: {{ exam.layout }} </li>
+    <li> Layout: {{ exam.get_layout_name }} </li>
          
     
 </ul>
