--- a/exams/templates/exams/editexam.html
+++ b/exams/templates/exams/editexam.html
@@ -5,7 +5,7 @@
 <br>
 {% if exam %}
 {% if exam_question_list %}
-
+Drag questions from the left list to the right to remove them, or highlighted questions from the right to the left to add them. Highlighted questions are those in your cart.<br>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
