--- a/questions/templates/questions/search.html
+++ b/questions/templates/questions/search.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>Search</h1>
+<h1>Search Questions</h1>
     <form action="/questions/search_results/" method="GET">{% csrf_token %}
         {{ form.as_p }}
         {% if tags %}
