--- a/questions/templates/questions/cartoptions.html
+++ b/questions/templates/questions/cartoptions.html
@@ -4,11 +4,11 @@
   
 <br>
 {% if cart_question_list %}
-
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
-
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
+Drag questions from the left list to the right to remove them. <br>
+Reorder questions in the left list to change the order of the questions. <br>
+  <link rel="stylesheet" href="/static/home/misc/jquery-ui.css">
+  <script src="/static/home/misc/jquery-1.12.4.js"></script>
+  <script src="/static/home/misc/jquery-ui.js"></script>
 
   <style>
   #sortable1, #sortable2 {
