Add 'preview' app - enable on page pdf rendering

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,6 +19,9 @@
 <div>
 <p><a href="{% url 'exams.templates' %}">Your Exam Templates</a></p>
 </div>
+<div>
+<p><a href="{% url 'previews.previewView' %}">Your Preview Code</a></p>
+</div>
 <br>
 <div>
 {% if user.is_superuser %}
